5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1643_1054.log
== TEST (2019-04-10 18:59:02) 
-- CODE:
x= int(input("qual o valor de x: "))
y= int(input("qual o valor de y: "))
fx= 2*x+y
if(fx==3):
	print("ponto pertence a reta")
else(fx=!0)
	print("ponto nao pertence a reta")

-- ERROR:
File "XXXX", line 6
    else(fx=!0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:59:08) 
-- CODE:
x= int(input("qual o valor de x: "))
y= int(input("qual o valor de y: "))
fx= 2*x+y
if(fx==3):
	print("ponto pertence a reta")
else(fx=!0):
	print("ponto nao pertence a reta")

-- ERROR:
File "XXXX", line 6
    else(fx=!0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:59:40) 
-- CODE:
x= int(input("qual o valor de x: "))
y= int(input("qual o valor de y: "))
fx= 2*x+y
if(fx==3):
	print("ponto pertence a reta")
else:(fx=!0)
	print("ponto nao pertence a reta")

-- ERROR:
File "XXXX", line 6
    else:(fx=!0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:00:34) 
-- CODE:
x= int(input("qual o valor de x: "))
y= int(input("qual o valor de y: "))
fx= 2*x+y
if(fx==3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")

-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:01:04) 
-- CODE:
x= float(input("qual o valor de x: "))
y= float(input("qual o valor de y: "))
fx= 2*x+y
if(fx==3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")

-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:01:17) 
-- CODE:
x= float(input("qual o valor de x: "))
y= float(input("qual o valor de y: "))
fx= 2*x+y
if(fx==3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")

-- EXECUTION TIME:
0.196647
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
